--- a/cyberware/src/main/resources/translation/general_en.properties
+++ b/cyberware/src/main/resources/translation/general_en.properties
@@ -1,5 +1,10 @@
-accountFormButton=Coninue
-accountFormLabel=
-accountTitle=Account
+customerFormPasswordLabel=Password
+customerFormUsernameLabel=Email address
+logInLabel=Log in to an account
+signInLabel=Sign in to an account
+customerFormFirstNameLabel=First name
+customerFormLastNameLabel=Last name
+customerFormPhoneNumberLabel=Phone number
+customerFormAddressLabel=Postal address
 logInTitle=Log In
 signInTitle=Sign In
