--- a/cyberware/src/main/resources/translation/general_fr.properties
+++ b/cyberware/src/main/resources/translation/general_fr.properties
@@ -1,5 +1,10 @@
-accountFormButton=Continuer
-accountFormLabel=Entrez votre adresse mail
-accountTitle=Compte
+customerFormPasswordLabel=Mot de passe
+customerFormUsernameLabel=Adresse mail
+logInLabel=Se connecter à un compte
+signInLabel=Créer un compte
+customerFormFirstNameLabel=Prénom
+customerFormLastNameLabel=Nom de famille
+customerFormPhoneNumberLabel=Numéro de téléphone
+customerFormAddressLabel=Adresse postale
 logInTitle=Se Connecter
-signInTitle=S'Enregistrer
+signInTitle=Enregistrer
