--- a/cyberware/src/main/resources/translation/general_en.properties
+++ b/cyberware/src/main/resources/translation/general_en.properties
@@ -1,10 +1,14 @@
 customerFormPasswordLabel=Password
 customerFormUsernameLabel=Email address
-logInLabel=Log in to an account
-signInLabel=Sign in to an account
+loginLabel=Log in to an account
+signinLabel=Sign in to an account
 customerFormFirstNameLabel=First name
 customerFormLastNameLabel=Last name
 customerFormPhoneNumberLabel=Phone number
 customerFormAddressLabel=Postal address
-logInTitle=Log In
-signInTitle=Sign In
+loginTitle=Log In
+signinTitle=Sign In
+navigationBarAccountLabel=Account
+navigationBarHomeLabel=Home
+navigationBarLanguageLabel=Language
+logoutTitle=Log Out
