--- a/cyberware/src/main/resources/translation/general_fr.properties
+++ b/cyberware/src/main/resources/translation/general_fr.properties
@@ -1,10 +1,14 @@
 customerFormPasswordLabel=Mot de passe
 customerFormUsernameLabel=Adresse mail
-logInLabel=Se connecter à un compte
-signInLabel=Créer un compte
+loginLabel=Se connecter à un compte
+signinLabel=Créer un compte
 customerFormFirstNameLabel=Prénom
 customerFormLastNameLabel=Nom de famille
 customerFormPhoneNumberLabel=Numéro de téléphone
 customerFormAddressLabel=Adresse postale
-logInTitle=Se Connecter
-signInTitle=Enregistrer
+loginTitle=Se connecter
+signinTitle=S'enregistrer
+navigationBarAccountLabel=Compte
+navigationBarHomeLabel=Accueil
+navigationBarLanguageLabel=Langue
+logoutTitle=Se déconnecter
