--- a/cyberware/src/main/resources/translation/general_en.properties
+++ b/cyberware/src/main/resources/translation/general_en.properties
@@ -8,7 +8,14 @@ customerFormPhoneNumberLabel=Phone number
 customerFormAddressLabel=Postal address
 loginTitle=Log In
 signinTitle=Sign In
-navigationBarAccountLabel=Account
-navigationBarHomeLabel=Home
-navigationBarLanguageLabel=Language
+accountTitle=Account
+homeTitle=Home
+languageTitle=Language
 logoutTitle=Log Out
+frenchTitle=French
+englishTitle=English
+cartTitle=Cart
+itemTitle=Item
+categoryTitle=Category
+homeLabel=Welcome to Cyberware!
+cyberwareName=Cyberware
