--- a/cyberware/src/main/resources/translation/general_fr.properties
+++ b/cyberware/src/main/resources/translation/general_fr.properties
@@ -8,7 +8,14 @@ customerFormPhoneNumberLabel=Numéro de téléphone
 customerFormAddressLabel=Adresse postale
 loginTitle=Se connecter
 signinTitle=S'enregistrer
-navigationBarAccountLabel=Compte
-navigationBarHomeLabel=Accueil
-navigationBarLanguageLabel=Langue
+accountTitle=Compte
+homeTitle=Accueil
+languageTitle=Langue
 logoutTitle=Se déconnecter
+frenchTitle=Français
+englishTitle=Anglais
+cartTitle=Panier
+itemTitle=Article
+categoryTitle=Catégorie
+homeLabel=Bienvenue sur Cyberware !
+cyberwareName=Cyberware
