--- a/cyberware/src/main/resources/translation/general_en.properties
+++ b/cyberware/src/main/resources/translation/general_en.properties
@@ -19,3 +19,6 @@ itemTitle=Item
 categoryTitle=Category
 homeLabel=Welcome to Cyberware!
 cyberwareName=Cyberware
+priceTitle=Price
+descriptionTitle=Description
+nameTitle=Name
