--- a/cyberware/src/main/resources/translation/general_fr.properties
+++ b/cyberware/src/main/resources/translation/general_fr.properties
@@ -19,3 +19,6 @@ itemTitle=Article
 categoryTitle=Catégorie
 homeLabel=Bienvenue sur Cyberware !
 cyberwareName=Cyberware
+priceTitle=Prix
+descriptionTitle=Description
+nameTitle=Nom
