--- a/cyberware/src/main/resources/translation/general_en.properties
+++ b/cyberware/src/main/resources/translation/general_en.properties
@@ -23,3 +23,7 @@ priceTitle=Price
 descriptionTitle=Description
 nameTitle=Name
 cartLabel=Check your cart
+categoryLabel=Here are all categories
+itemLabel=Here are all items
+specificCategoryItemLabel=Here are all items in this category
+quantityTitle=Quantity
