--- a/cyberware/src/main/resources/translation/general_fr.properties
+++ b/cyberware/src/main/resources/translation/general_fr.properties
@@ -12,7 +12,7 @@ accountTitle=Compte
 homeTitle=Accueil
 languageTitle=Langue
 logoutTitle=Se déconnecter
-frenchTitle=Français
+frenchTitle=Voici toutes les categories
 englishTitle=Anglais
 cartTitle=Panier
 itemTitle=Article
@@ -23,3 +23,7 @@ priceTitle=Prix
 descriptionTitle=Description
 nameTitle=Nom
 cartLabel=Consulter votre panier
+categoryLabel=Voici toutes les catégories
+itemLabel=Voici tous les articles
+specificCategoryItemLabel=Voici tous les articles de cette catégorie
+quantityTitle=Quantité
