--- a/cyberware/src/main/resources/translation/general_en.properties
+++ b/cyberware/src/main/resources/translation/general_en.properties
@@ -27,3 +27,4 @@ categoryLabel=Here are all categories
 itemLabel=Here are all items
 specificCategoryItemLabel=Here are all items in this category
 quantityTitle=Quantity
+imageTitle=Image
