--- a/cyberware/src/main/resources/translation/general_fr.properties
+++ b/cyberware/src/main/resources/translation/general_fr.properties
@@ -12,7 +12,7 @@ accountTitle=Compte
 homeTitle=Accueil
 languageTitle=Langue
 logoutTitle=Se déconnecter
-frenchTitle=Voici toutes les categories
+frenchTitle=Français
 englishTitle=Anglais
 cartTitle=Panier
 itemTitle=Article
@@ -27,3 +27,4 @@ categoryLabel=Voici toutes les catégories
 itemLabel=Voici tous les articles
 specificCategoryItemLabel=Voici tous les articles de cette catégorie
 quantityTitle=Quantité
+imageTitle=Image
