--- a/cyberware/src/main/resources/translation/general_en.properties
+++ b/cyberware/src/main/resources/translation/general_en.properties
@@ -28,3 +28,4 @@ itemLabel=Here are all items
 specificCategoryItemLabel=Here are all items in this category
 quantityTitle=Quantity
 imageTitle=Image
+updateCartTitle=Update cart
