--- a/cyberware/src/main/resources/translation/general_fr.properties
+++ b/cyberware/src/main/resources/translation/general_fr.properties
@@ -28,3 +28,4 @@ itemLabel=Voici tous les articles
 specificCategoryItemLabel=Voici tous les articles de cette catégorie
 quantityTitle=Quantité
 imageTitle=Image
+updateCartTitle=Mettre à jour le panier
