--- a/cyberware/src/main/resources/translation/general_en.properties
+++ b/cyberware/src/main/resources/translation/general_en.properties
@@ -16,7 +16,9 @@ frenchTitle=French
 englishTitle=English
 cartTitle=Cart
 itemTitle=Item
+itemsTitle=Items
 categoryTitle=Category
+categoriesTitle=Categories
 homeLabel=Welcome to Cyberware!
 cyberwareName=Cyberware
 priceTitle=Price
