--- a/cyberware/src/main/resources/translation/general_fr.properties
+++ b/cyberware/src/main/resources/translation/general_fr.properties
@@ -16,7 +16,9 @@ frenchTitle=Français
 englishTitle=Anglais
 cartTitle=Panier
 itemTitle=Article
+itemsTitle=Articles
 categoryTitle=Catégorie
+categoriesTitle=Catégories
 homeLabel=Bienvenue sur Cyberware !
 cyberwareName=Cyberware
 priceTitle=Prix
