--- a/cyberware/src/main/resources/translation/general_fr.properties
+++ b/cyberware/src/main/resources/translation/general_fr.properties
@@ -31,3 +31,4 @@ specificCategoryItemLabel=Voici tous les articles de cette catégorie
 quantityTitle=Quantité
 imageTitle=Image
 updateCartTitle=Mettre à jour le panier
+addToCartTitle=Ajouter au panier
