--- a/cyberware/src/main/resources/translation/general_en.properties
+++ b/cyberware/src/main/resources/translation/general_en.properties
@@ -31,3 +31,4 @@ specificCategoryItemLabel=Here are all items in this category
 quantityTitle=Quantity
 imageTitle=Image
 updateCartTitle=Update cart
+addToCartTitle=Add to cart
