--- a/cyberware/src/main/resources/translation/general_en.properties
+++ b/cyberware/src/main/resources/translation/general_en.properties
@@ -9,7 +9,6 @@ customerFormAddressLabel=Postal address
 loginTitle=Log In
 signinTitle=Sign In
 accountTitle=Account
-homeTitle=Home
 languageTitle=Language
 logoutTitle=Log Out
 frenchTitle=French
@@ -32,3 +31,6 @@ quantityTitle=Quantity
 imageTitle=Image
 updateCartTitle=Update cart
 addToCartTitle=Add to cart
+emptyCartLabel=Your cart is empty
+totalTitle=Total
+confirmTitle=Confirm
