--- a/cyberware/src/main/resources/translation/general_fr.properties
+++ b/cyberware/src/main/resources/translation/general_fr.properties
@@ -9,7 +9,6 @@ customerFormAddressLabel=Adresse postale
 loginTitle=Se connecter
 signinTitle=S'enregistrer
 accountTitle=Compte
-homeTitle=Accueil
 languageTitle=Langue
 logoutTitle=Se déconnecter
 frenchTitle=Français
@@ -32,3 +31,6 @@ quantityTitle=Quantité
 imageTitle=Image
 updateCartTitle=Mettre à jour le panier
 addToCartTitle=Ajouter au panier
+emptyCartLabel=Votre panier est vide
+totalTitle=Total
+confirmTitle=Confirmer
