--- a/cyberware/src/main/resources/translation/general_en.properties
+++ b/cyberware/src/main/resources/translation/general_en.properties
@@ -14,9 +14,7 @@ logoutTitle=Log Out
 frenchTitle=French
 englishTitle=English
 cartTitle=Cart
-itemTitle=Item
 itemsTitle=Items
-categoryTitle=Category
 categoriesTitle=Categories
 homeLabel=Welcome to Cyberware!
 cyberwareName=Cyberware
@@ -29,8 +27,14 @@ itemLabel=Here are all items
 specificCategoryItemLabel=Here are all items in this category
 quantityTitle=Quantity
 imageTitle=Image
-updateCartTitle=Update cart
 addToCartTitle=Add to cart
 emptyCartLabel=Your cart is empty
-totalTitle=Total
+totalTitle=TOTAL
 confirmTitle=Confirm
+paymentTitle=Payment
+paymentLabel=Pay with Paypal
+successfulPaymentTitle=Successful Payment
+successfulPaymentLabel=Payment is successful
+cancelledPaymentTitle=Cancelled Payment
+cancelledPaymentLabel=Payment has been cancelled
+discountTitle=DISCOUNT
