--- a/cyberware/src/main/resources/translation/general_fr.properties
+++ b/cyberware/src/main/resources/translation/general_fr.properties
@@ -14,9 +14,7 @@ logoutTitle=Se déconnecter
 frenchTitle=Français
 englishTitle=Anglais
 cartTitle=Panier
-itemTitle=Article
 itemsTitle=Articles
-categoryTitle=Catégorie
 categoriesTitle=Catégories
 homeLabel=Bienvenue sur Cyberware !
 cyberwareName=Cyberware
@@ -29,8 +27,14 @@ itemLabel=Voici tous les articles
 specificCategoryItemLabel=Voici tous les articles de cette catégorie
 quantityTitle=Quantité
 imageTitle=Image
-updateCartTitle=Mettre à jour le panier
 addToCartTitle=Ajouter au panier
 emptyCartLabel=Votre panier est vide
-totalTitle=Total
+totalTitle=TOTAL
 confirmTitle=Confirmer
+paymentTitle=Paiement
+paymentLabel=Payer avec Paypal
+successfulPaymentTitle=Paiement réussi
+successfulPaymentLabel=Le paiement est réussi
+cancelledPaymentTitle=Paiement annulé
+cancelledPaymentLabel=Le paiement a été annulé
+discountTitle=RÉDUCTION
