--- a/cyberware/src/main/resources/translation/error_fr.properties
+++ b/cyberware/src/main/resources/translation/error_fr.properties
@@ -5,3 +5,4 @@ Size.customer.address=La taille de l'adresse postale doit être entre 1 et 100 c
 Size.customer.password=La taille du mot de passe doit être entre 1 et 60 caractères
 Min.itemForm.quantity=La quantité minimum doit est 1 unité
 Max.itemForm.quantity=La quantité maximum doit est 100 unités
+typeMismatch.itemForm.quantity=La quantité doit être composée uniquement de chiffres
