--- a/cyberware/src/main/resources/translation/error_en.properties
+++ b/cyberware/src/main/resources/translation/error_en.properties
@@ -6,3 +6,4 @@ Size.customer.password=Password size must be between 1 and 60 characters
 Min.itemForm.quantity=Quantity minimum size must be 1 unit
 Max.itemForm.quantity=Quantity maximum size must be 100 units
 typeMismatch.itemForm.quantity=Quantity must be composed of numbers only
+loginError=Email address or password is incorrect
