--- a/cyberware/src/main/resources/translation/error_fr.properties
+++ b/cyberware/src/main/resources/translation/error_fr.properties
@@ -6,3 +6,4 @@ Size.customer.password=La taille du mot de passe doit être entre 1 et 60 caract
 Min.itemForm.quantity=La quantité minimum doit est 1 unité
 Max.itemForm.quantity=La quantité maximum doit est 100 unités
 typeMismatch.itemForm.quantity=La quantité doit être composée uniquement de chiffres
+loginError=L'adresse mail ou le mot de passe est incorrect
